# pinn_d7

./: .gitignore  README.md  pyproject.toml  requirements.txt
pinn_d7/: grid.py  losses.py  models.py  train_conditional.py  train_inverse.py  trainer.py
scripts/: analyze_phases.py  check_parallel.py  ode_free_energy_magnetic.py  run_inverse.py  run_mass_cond.py  run_mass_scan.py  test_initialization.py
scripts/data/: HotFree.csv  HotFree0_0_9.csv  HotFreeZoom.csv  MagCondensate.csv  MagFree.csv
